--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cropper",
     "description": "A jQuery image cropping plugin.",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "keywords": [
         "image",
         "cropping",
@@ -14,7 +14,7 @@
     ],
     "author": {
         "name": "Fengyuan Chen",
-        "url": "https://github.com/fengyuanchen/"
+        "url": "https://github.com/fengyuanchen"
     },
     "homepage": "https://github.com/fengyuanchen/cropper",
     "repository": {
