--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cropper",
-    "description": "A jQuery image cropping plugin.",
-    "version": "0.2.4",
+    "description": "A simple and lightweight jQuery image cropping plugin.",
+    "version": "0.3.0",
     "keywords": [
         "image",
         "cropping",
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "grunt": "~0.4.2",
+        "grunt-autoprefixer": "~0.7.2",
         "grunt-banner": "~0.2.1",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-jshint": "~0.8.0",
@@ -41,6 +42,7 @@
         "grunt-contrib-cssmin": "~0.8.0",
         "grunt-contrib-copy": "~0.5.0",
         "grunt-contrib-watch": "~0.5.3",
+        "grunt-csscomb": "~2.0.1",
         "load-grunt-tasks": "~0.4.0"
     }
 }
