--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.7.1",
+  "version": "0.7.2",
+  "main": [
+    "dist/cropper.js",
+    "dist/cropper.css"
+  ],
   "keywords": [
     "image",
     "cropping",
