--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
   "version": "0.7.2",
-  "main": [
-    "dist/cropper.js",
-    "dist/cropper.css"
-  ],
+  "main": "dist/cropper.js",
   "keywords": [
     "image",
     "cropping",
@@ -48,6 +45,7 @@
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-htmlcomb": "~0.1.0",
     "grunt-csscomb": "~3.0.0",
     "grunt-jscs": "~0.7.1",
     "load-grunt-tasks": "~0.6.0"
