--- a/resources/.jshintrc
+++ b/resources/.jshintrc
@@ -1,7 +1,7 @@
 {
   "asi"      : true,
   "browser"  : true,
-  "eqeqeq"   : false,
+  "eqeqeq"   : true,
   "eqnull"   : true,
   "es3"      : true,
   "expr"     : true,
@@ -10,6 +10,12 @@
   "laxbreak" : true,
   "nonbsp"   : true,
   "strict"   : false,
-  "undef"    : false,
-  "unused"   : true
+  "undef"    : true,
+  "unused"   : true,
+  "globals": {
+    "module": true,
+    "define": true,
+    "require":true,
+    "jQuery": true
+  }
 }
