--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.7.4",
+  "version": "0.7.5-beta",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
