--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.7.5",
+  "version": "0.7.6-beta",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
@@ -36,18 +36,18 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~1.0.1",
+    "grunt-autoprefixer": "~2.0.0",
     "grunt-banner": "~0.2.3",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-csslint": "~0.3.1",
     "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-htmlcomb": "~0.1.0",
     "grunt-csscomb": "~3.0.0",
-    "grunt-jscs": "~0.7.1",
-    "load-grunt-tasks": "~0.6.0"
+    "grunt-jscs": "~1.0.0",
+    "load-grunt-tasks": "~1.0.0"
   }
 }
