--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.7.5",
+  "version": "0.7.6-beta",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
