--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,10 @@
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
   "version": "0.7.7",
-  "main": "dist/cropper.js",
+  "main": [
+    "dist/cropper.js",
+    "dist/cropper.css"
+  ],
   "keywords": [
     "image",
     "cropping",
