--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,4 @@
-# Files to ignore
+# Files to ignore for NPM
 
-_gh_pages
-releases
-build
-tests
-utils
-workspace
-CHANGELOG.md
+bower_components
+_*
