--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.7.9",
+  "version": "0.8.0",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
@@ -37,16 +37,21 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-less": "~1.0.0",
     "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-html-validation": "~0.1.18",
     "grunt-autoprefixer": "~2.2.0",
-    "grunt-htmlcomb": "~0.1.0",
+    "grunt-replace": "~0.8.0",
     "grunt-csscomb": "~3.0.0",
-    "grunt-banner": "~0.2.3",
+    "grunt-newer": "~1.1.0",
     "grunt-jscs": "~1.2.0",
     "load-grunt-tasks": "~3.1.0"
   }
