--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "main": [
     "dist/cropper.js",
     "dist/cropper.css"
   ],
   "keywords": [
     "image",
-    "cropping",
+    "crop",
     "jquery",
     "plugin",
     "html",
@@ -27,20 +27,18 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "tests",
     "test",
     "examples",
     "assets",
     "demo",
-    "docs",
-    "_*"
+    "docs"
   ],
   "dependencies": {
-    "jquery": ">= 1.9.0"
+    "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "jquery": "~1.11.2",
-    "bootstrap": "~3.3.2",
-    "qunit": "~1.17.1"
+    "bootstrap": "~3.3.4",
+    "jquery": "~1.11.3",
+    "qunit": "~1.18.0"
   }
 }
