--- a/package.json
+++ b/package.json
@@ -31,25 +31,5 @@
   "dependencies": {
     "jquery": ">= 1.9.1"
   },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~3.0.3",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-copy": "~0.8.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.12.3",
-    "grunt-contrib-htmlmin": "~0.4.0",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-less": "~1.0.0",
-    "grunt-contrib-qunit": "~0.7.0",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-csscomb": "~3.0.1",
-    "grunt-html-validation": "~0.1.18",
-    "grunt-jscs": "~1.8.0",
-    "grunt-newer": "~1.1.1",
-    "grunt-replace": "~0.9.2",
-    "load-grunt-tasks": "~3.2.0"
-  }
+  "devDependencies": {}
 }
