--- a/package.json
+++ b/package.json
@@ -31,5 +31,21 @@
   "dependencies": {
     "jquery": ">= 1.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat": "~2.6.0",
+    "gulp-csscomb": "^3.0.6",
+    "gulp-csslint": "^0.1.5",
+    "gulp-jscs": "^2.0.0",
+    "gulp-jshint": "^1.11.0",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-qunit": "^1.2.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-uglify": "^1.1.0"
+  }
 }
