Add new keywords

--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,9 @@
     "crop",
     "cropping",
     "move",
-    "rotate",
     "zoom",
+    "rotate",
+    "scale",
     "jquery",
     "plugin",
     "html",
