--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "gulp-htmlcomb": "0.0.1",
     "gulp-jscs": "^2.0.0",
     "gulp-jshint": "^1.11.0",
-    "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.1.6",
     "gulp-qunit": "^1.2.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "~1.5.2",
     "gulp-uglify": "^1.1.0"
   }
