--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "0.11.1",
+  "version": "1.0.0-rc.1",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
@@ -39,20 +39,20 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
+    "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "~2.6.0",
     "gulp-csscomb": "^3.0.6",
-    "gulp-csslint": "^0.1.5",
-    "gulp-htmlcomb": "0.0.1",
+    "gulp-csslint": "^0.2.0",
+    "gulp-htmlcomb": "0.1.0",
     "gulp-jscs": "^2.0.0",
     "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.1.6",
+    "gulp-minify-css": "^1.2.1",
     "gulp-qunit": "^1.2.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "~1.5.2",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.4.0"
   }
 }
