--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "main": "dist/cropper.js",
   "keywords": [
     "image",
@@ -44,7 +44,7 @@
     "gulp-csscomb": "^3.0.6",
     "gulp-csslint": "^0.2.0",
     "gulp-htmlcomb": "0.1.0",
-    "gulp-jscs": "^3.0.0",
+    "gulp-jscs": "^3.0.1",
     "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.2.1",
@@ -52,7 +52,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "~1.5.2",
+    "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "^1.4.1"
   }
 }
