--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "~2.6.0",
     "gulp-csscomb": "^3.0.6",
     "gulp-csslint": "^0.2.0",
     "gulp-htmlcomb": "0.1.0",
-    "gulp-jscs": "^3.0.1",
+    "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.11.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-qunit": "^1.2.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "^1.4.1"
+    "gulp-uglify": "^1.4.2"
   }
 }
