--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "main": "dist/cropper.js",
   "license": "MIT",
   "repository": "fengyuanchen/cropper",
   "author": {
     "name": "Fengyuan Chen",
-    "url": "chenfengyuan.com"
+    "url": "http://chenfengyuan.com"
   },
   "keywords": [
     "image",
@@ -20,6 +20,7 @@
     "scale",
     "jquery",
     "plugin",
+    "jqueryplugin",
     "html",
     "css",
     "javascript",
@@ -49,7 +50,7 @@
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.12.0",
     "gulp-load-plugins": "^1.0.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-css": "^1.2.2",
     "gulp-qunit": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
