--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "~2.6.0",
+    "gulp-csscomb": "^3.0.6",
     "gulp-csslint": "^0.2.0",
     "gulp-htmlcomb": "0.1.0",
     "gulp-jscs": "^3.0.2",
