--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
 # Files to ignore
 
+archives
 bower_components
 examples
 assets
@@ -12,4 +13,4 @@ dist/*.map
 bower.json
 gulpfile.js
 CONTRIBUTING.md
-FAQ.md
+ISSUE_TEMPLATE.md
