--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "main": "dist/cropper.js",
   "license": "MIT",
   "repository": "fengyuanchen/cropper",
@@ -30,24 +30,28 @@
     "development"
   ],
   "dependencies": {
-    "jquery": ">= 1.9.1"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.6.3",
+    "jquery": "^1.12.4",
+    "qunitjs": "^2.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-csscomb": "^3.0.6",
-    "gulp-csslint": "^0.3.0",
+    "gulp-csslint": "^0.3.1",
     "gulp-htmlcomb": "^0.1.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^1.12.0",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "^1.2.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-qunit": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.2"
   }
 }
