--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "2.3.4",
+  "version": "3.0.0-alpha",
   "main": "dist/cropper.js",
   "license": "MIT",
   "repository": "fengyuanchen/cropper",
@@ -29,30 +29,41 @@
     "web",
     "development"
   ],
+  "scripts": {
+    "build:css": "postcss -c postcss.config.json",
+    "build:js": "rollup -c",
+    "build": "npm run build:css && npm run build:js",
+    "compress:css": "postcss -u cssnano dist/cropper.css -o dist/cropper.min.css",
+    "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
+    "compress": "npm run compress:css && npm run compress:js",
+    "watch:css": "postcss -c postcss.config.json -w",
+    "watch:js": "rollup -c -w",
+    "lint": "eslint src/js",
+    "postbuild": "npm run compress && node build",
+    "prebuild": "npm run lint && npm test",
+    "start": "npm-run-all --parallel watch:*",
+    "test": "node-qunit-phantomjs test/index.html"
+  },
   "dependencies": {
     "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.6.3",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-csscomb": "^3.0.6",
-    "gulp-csslint": "^1.0.0",
-    "gulp-htmlcomb": "^0.1.0",
-    "gulp-jscs": "^4.0.0",
-    "gulp-jshint": "^2.0.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-qunit": "^1.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.3",
-    "jquery": "^1.12.4",
-    "qunitjs": "^2.0.1"
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "node-qunit-phantomjs": "^1.5.0",
+    "npm-run-all": "^3.1.2",
+    "postcss-assets": "^4.1.0",
+    "postcss-cli": "^2.6.0",
+    "postcss-cssnext": "^2.9.0",
+    "rollup": "^0.36.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-watch": "^2.5.0",
+    "uglify-js": "^2.7.5"
   }
 }
