--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "browser": "dist/cropper.js",
@@ -23,7 +23,7 @@
     "scale",
     "jquery",
     "plugin",
-    "jqueryplugin",
+    "jquery-plugin",
     "html",
     "css",
     "javascript",
@@ -32,39 +32,43 @@
     "development"
   ],
   "scripts": {
-    "build:css": "postcss src/css/cropper.css --no-map -o dist/cropper.css",
-    "build:js": "rollup -c",
     "build": "npm run build:css && npm run build:js",
-    "compress:css": "postcss dist/cropper.css -u cssnano --no-map -o dist/cropper.min.css",
-    "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
+    "build:css": "postcss src/css/cropper.css -o dist/cropper.css -m",
+    "build:js": "rollup -c",
     "compress": "npm run compress:css && npm run compress:js",
-    "watch:css": "postcss src/css/cropper.css -o docs/css/cropper.css -w",
-    "watch:js": "rollup -c -w -m",
+    "compress:css": "postcss dist/cropper.css -u cssnano -o dist/cropper.min.css -m",
+    "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
+    "copy": "cpy dist/cropper.css docs/css",
     "lint": "eslint src/js --fix",
-    "postbuild": "npm test && npm run compress && node build",
+    "postbuild": "npm test && npm run compress && npm run copy",
     "prebuild": "npm run lint",
     "start": "npm-run-all --parallel watch:*",
-    "test": "node-qunit-phantomjs test/index.html --timeout 10"
+    "test": "node-qunit-phantomjs test/index.html --timeout 10",
+    "watch:css": "postcss src/css/cropper.css -o docs/css/cropper.css -m -w",
+    "watch:js": "rollup -c -m -w"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
-    "eslint": "^4.6.0",
-    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
     "eslint-plugin-import": "^2.7.0",
     "jquery": "^3.2.1",
     "node-qunit-phantomjs": "^1.5.0",
     "npm-run-all": "^4.1.1",
-    "postcss-cli": "^4.1.0",
+    "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.0.2",
+    "postcss-header": "^1.0.0",
     "postcss-url": "^7.1.2",
-    "rollup": "^0.49.2",
+    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1",
-    "uglify-js": "^3.0.28"
+    "stylefmt": "^6.0.0",
+    "uglify-js": "^3.1.3"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
