--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "browser": "dist/cropper.js",
@@ -9,7 +9,7 @@
   "repository": "fengyuanchen/cropper",
   "homepage": "https://fengyuanchen.github.io/cropper",
   "author": {
-    "name": "Fengyuan Chen",
+    "name": "Chen Fengyuan",
     "url": "http://chenfengyuan.com"
   },
   "keywords": [
@@ -40,7 +40,7 @@
     "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
     "copy": "cpy dist/cropper.css docs/css",
     "lint": "eslint src/js --fix",
-    "postbuild": "npm test && npm run compress && npm run copy",
+    "postbuild": "npm run compress && npm run copy && npm test",
     "prebuild": "npm run lint",
     "start": "npm-run-all --parallel watch:*",
     "test": "node-qunit-phantomjs test/index.html --timeout 10",
