--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "browser": "dist/cropper.js",
-  "license": "MIT",
   "repository": "fengyuanchen/cropper",
   "homepage": "https://fengyuanchen.github.io/cropper",
+  "license": "MIT",
   "author": {
     "name": "Chen Fengyuan",
     "url": "http://chenfengyuan.com"
@@ -39,12 +39,13 @@
     "build": "npm run build:css && npm run build:js",
     "build:css": "postcss src/css/cropper.css -o dist/cropper.css --no-map",
     "build:js": "rollup -c",
+    "clear": "del-cli dist",
     "compress": "npm run compress:css && npm run compress:js",
     "compress:css": "postcss dist/cropper.css -u cssnano -o dist/cropper.min.css --no-map",
     "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
     "copy": "cpy dist/cropper.css docs/css",
     "lint": "eslint src/js --fix",
-    "release": "npm run lint && npm run build && npm run compress && npm run copy && npm test",
+    "release": "npm run clear && npm run lint && npm run build && npm run compress && npm run copy && npm test",
     "start": "npm-run-all --parallel watch:*",
     "test": "node-qunit-phantomjs test/index.html --timeout 10",
     "watch:css": "postcss src/css/cropper.css -o docs/css/cropper.css -m -w",
@@ -55,23 +56,24 @@
     "babel-preset-env": "^1.6.1",
     "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
-    "eslint": "^4.9.0",
+    "del-cli": "^1.1.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "jquery": "^3.2.1",
-    "node-qunit-phantomjs": "^1.5.1",
-    "npm-run-all": "^4.1.1",
+    "node-qunit-phantomjs": "^1.6.0",
+    "npm-run-all": "^4.1.2",
     "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-header": "^1.0.0",
     "postcss-url": "^7.1.2",
-    "rollup": "^0.50.0",
+    "rollup": "^0.51.5",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.4",
+    "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1",
     "stylefmt": "^6.0.0",
-    "uglify-js": "^3.1.4"
+    "uglify-js": "^3.1.9"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
