--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "3.1.4",
+  "version": "3.1.5",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "browser": "dist/cropper.js",
@@ -21,6 +21,7 @@
     "crop",
     "cropper",
     "cropping",
+    "processing",
     "move",
     "zoom",
     "rotate",
@@ -58,23 +59,23 @@
     "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "jquery": "^3.2.1",
+    "eslint-plugin-import": "^2.9.0",
+    "jquery": "^3.3.1",
     "node-qunit-phantomjs": "^2.0.0",
     "npm-run-all": "^4.1.2",
-    "postcss-cli": "^4.1.1",
-    "postcss-cssnext": "^3.0.2",
+    "postcss-cli": "^5.0.0",
+    "postcss-cssnext": "^3.1.0",
     "postcss-header": "^1.0.0",
     "postcss-url": "^7.3.0",
-    "rollup": "^0.54.0",
+    "rollup": "^0.56.2",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-node-resolve": "^3.0.3",
     "rollup-watch": "^4.3.1",
     "stylefmt": "^6.0.0",
-    "uglify-js": "^3.3.5"
+    "uglify-js": "^3.3.12"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
