build: release 4.0.0-alpha

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "3.1.6",
+  "version": "4.0.0-alpha",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
-  "browser": "dist/cropper.js",
+  "unpkg": "dist/cropper.js",
   "repository": "fengyuanchen/cropper",
   "homepage": "https://fengyuanchen.github.io/cropper",
   "license": "MIT",
@@ -19,13 +19,14 @@
   "keywords": [
     "image",
     "crop",
-    "cropper",
-    "cropping",
-    "processing",
     "move",
     "zoom",
     "rotate",
     "scale",
+    "cropper",
+    "cropper.js",
+    "cropping",
+    "processing",
     "jquery",
     "plugin",
     "jquery-plugin",
@@ -38,38 +39,54 @@
   ],
   "scripts": {
     "build": "npm run build:css && npm run build:js",
-    "build:css": "postcss src/css/cropper.css -o dist/cropper.css --no-map",
+    "build:css": "postcss src/index.css -o dist/cropper.css --no-map",
     "build:js": "rollup -c",
     "clear": "del-cli dist",
+    "commitmsg": "npm run lint && commitlint -e",
     "compress": "npm run compress:css && npm run compress:js",
     "compress:css": "postcss dist/cropper.css -u cssnano -o dist/cropper.min.css --no-map",
     "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
     "copy": "cpy dist/cropper.css docs/css",
-    "lint": "eslint src/js --fix",
+    "lint": "eslint src test --fix",
     "release": "npm run clear && npm run lint && npm run build && npm run compress && npm run copy && npm test",
     "start": "npm-run-all --parallel watch:*",
-    "test": "node-qunit-phantomjs test/index.html --timeout 10",
-    "watch:css": "postcss src/css/cropper.css -o docs/css/cropper.css -m -w",
+    "test": "karma start test/karma.conf.js",
+    "watch:css": "postcss src/index.css -o docs/css/cropper.css -m -w",
     "watch:js": "rollup -c -m -w"
   },
+  "dependencies": {
+    "cropperjs": "^1.3.1"
+  },
   "devDependencies": {
+    "@commitlint/cli": "^6.1.2",
+    "@commitlint/config-angular": "^6.1.2",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
     "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
     "del-cli": "^1.1.0",
     "eslint": "^4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "husky": "^0.14.3",
     "jquery": "^3.3.1",
-    "node-qunit-phantomjs": "^2.0.0",
+    "karma": "^2.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-rollup-preprocessor": "^5.1.1",
+    "mocha": "^5.0.1",
     "npm-run-all": "^4.1.2",
     "postcss-cli": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-header": "^1.0.0",
-    "postcss-url": "^7.3.0",
-    "rollup": "^0.56.2",
+    "postcss-import": "^11.1.0",
+    "postcss-url": "^7.3.1",
+    "puppeteer": "^1.1.1",
+    "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-node-resolve": "^3.0.3",
