--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "4.0.0-alpha",
+  "version": "4.0.0-beta",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "unpkg": "dist/cropper.js",
+  "style": "dist/cropper.css",
   "repository": "fengyuanchen/cropper",
   "homepage": "https://fengyuanchen.github.io/cropper",
   "license": "MIT",
@@ -55,11 +56,11 @@
     "watch:js": "rollup -c -m -w"
   },
   "dependencies": {
-    "cropperjs": "^1.3.1"
+    "cropperjs": "^1.3.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.1.2",
-    "@commitlint/config-angular": "^6.1.2",
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-angular": "^6.1.3",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
@@ -67,7 +68,7 @@
     "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "husky": "^0.14.3",
