--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cropper",
   "description": "A simple jQuery image cropping plugin.",
-  "version": "4.0.0-beta",
+  "version": "4.0.0",
   "main": "dist/cropper.common.js",
   "module": "dist/cropper.esm.js",
   "unpkg": "dist/cropper.js",
@@ -35,8 +35,7 @@
     "css",
     "javascript",
     "front-end",
-    "web",
-    "development"
+    "web"
   ],
   "scripts": {
     "build": "npm run build:css && npm run build:js",
@@ -48,7 +47,7 @@
     "compress:css": "postcss dist/cropper.css -u cssnano -o dist/cropper.min.css --no-map",
     "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
     "copy": "cpy dist/cropper.css docs/css",
-    "lint": "eslint src test --fix",
+    "lint": "eslint src test *.js --fix",
     "release": "npm run clear && npm run lint && npm run build && npm run compress && npm run copy && npm test",
     "start": "npm-run-all --parallel watch:*",
     "test": "karma start test/karma.conf.js",
@@ -56,7 +55,7 @@
     "watch:js": "rollup -c -m -w"
   },
   "dependencies": {
-    "cropperjs": "^1.3.2"
+    "cropperjs": "^1.3.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^6.1.3",
@@ -68,9 +67,9 @@
     "cpy-cli": "^1.0.1",
     "cssnano": "^3.10.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.10.0",
     "husky": "^0.14.3",
     "jquery": "^3.3.1",
     "karma": "^2.0.0",
@@ -79,21 +78,21 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-rollup-preprocessor": "^5.1.1",
-    "mocha": "^5.0.1",
+    "mocha": "^5.0.5",
     "npm-run-all": "^4.1.2",
     "postcss-cli": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-header": "^1.0.0",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.1",
-    "puppeteer": "^1.1.1",
-    "rollup": "^0.56.3",
+    "puppeteer": "^1.2.0",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^8.3.0",
-    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-watch": "^4.3.1",
     "stylefmt": "^6.0.0",
-    "uglify-js": "^3.3.12"
+    "uglify-js": "^3.3.17"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
