--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   ],
   "author": {
     "name": "Chen Fengyuan",
-    "url": "https://chenfengyuan.com"
+    "url": "https://chenfengyuan.com/"
   },
   "license": "MIT",
   "bugs": {
@@ -99,7 +99,6 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-watch": "^4.3.1",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
